[tool.poetry]
name = "backend-service-template"
version = "0.1.0"
description = ""
authors = ["Panarin Nikita <panatikin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
